Use UTF_8 constant for encoding